# MLBites

./: README.md  pyproject.toml
.cursor/rules/: mlbites-question-generator.mdc  python-uv.mdc
db/activation_functions/: metadata.json  question.md  solution.py  starting_point.py
db/adam_optimizer/: metadata.json  question.md  solution.py  starting_point.py
db/adam_optimizer_pytorch/: metadata.json  question.md  solution.md  solution.py  starting_point.py  tests.py
db/adamw_optimizer_pytorch/: metadata.json  question.md  solution.md  solution.py  starting_point.py  tests.py
db/alexnet/: metadata.json  question.md  solution.py  starting_point.py
db/autoencoder/: metadata.json  question.md  solution.py  starting_point.py
db/batch_norm/: metadata.json  question.md  solution.py  starting_point.py
db/batchnorm_numpy/: metadata.json  question.md  solution.md  solution.py  starting_point.py  tests.py
db/bow_tfidf/: metadata.json  question.md  solution.py  starting_point.py
db/clip/: metadata.json  question.md  solution.py  starting_point.py
db/clip_linear_probe/: metadata.json  question.md  solution.py  starting_point.py
db/cnn_classifier/: metadata.json  question.md  solution.py  starting_point.py
db/cnn_from_scratch/: metadata.json  question.md  solution.py  starting_point.py
db/contrastive_learning/: metadata.json  question.md  solution.py  starting_point.py
db/conv2d_numpy/: metadata.json  question.md  solution.md  solution.py  starting_point.py  tests.py
db/conv2d_pytorch/: metadata.json  (+5 more)
docs/: adding_questions.md
templates/: index.html
(+392 files in other folders)
