[project]
name = "mlbites"
version = "0.1.0"
description = "PyTorch Interview Questions Practice Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "python-multipart>=0.0.12",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlbites"]
